# fabi

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
fabi/: app.py  db_access.py  db_queries.py  readers.py  redis_access.py  routers.py  settings.py
fabi/utils/: logging_utils.py
sql/: create_schema.sql
